@@ -23,17 +23,7 @@
 &lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
 &lt;/style>&lt;/head>&lt;body style=" font-family:'DejaVu Sans'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">Help&lt;/span>&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;br />&lt;span style=" font-weight:600;">What's this?&lt;/span>&lt;br />&lt;/p>
-&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:40px; margin-right:40px; -qt-block-indent:0; text-indent:0px;">The cdcat is graphical (QT based) multiplatform (Linux/Windows) catalog program which scans the directories/drives you want and memorize the filesystem including the tags of mp3's and other data and store it in a small file. The database is stored in a gzipped XML format, so you can hack it, or use it if necessary :-) And the program can store the content of some specified files up to a limit size if you want. (for example: *.nfo) &lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;br />&lt;span style=" font-weight:600;">Usage:&lt;/span>&lt;br />&lt;/p>
-&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:40px; margin-right:40px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-style:italic;">Create a new catalog&lt;/span>: Run the &lt;span style=" font-family:'Courier New,courier';">New&lt;/span> command in the catalog menu. You have to type the name of the new catalog. You can specify the default username of the media(which you scan later), and add a comment to the catalog.&lt;br />Before the scanning select the necessary readable components in the config dialog, which can be mp3 tags content of some files or etc. If you done this, you "can scan one of your media with &lt;span style=" font-family:'Courier New,courier';">Add media&lt;/span>command in the Edit menu. In that dialog you have to specyfi the directory/or drive the media you want to add. It's recommended to specify the name and the number of the media which has to be unique. (The program always generate one identical name and number) You can label the media to a owner, if necessary. &lt;br />If you scanned your media, you will be able to browse in it with the browser window (like mc) , or search in it. You can save the catalog with &lt;span style=" font-family:'Courier New,courier';">save as&lt;/span> command in the Catalog menu. &lt;br />&lt;br />&lt;span style=" font-style:italic;">Open an existing catalog:&lt;/span>Run the &lt;span style=" font-family:'Courier New,courier';">open&lt;/span> command in the Catalog menu, and choice the file of the catalog. (*.hcf) After the opening you will be able browse the catalog or search in it. &lt;br />&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;br />&lt;span style=" font-weight:600;">Author:&lt;/span> &lt;/p>
-&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:40px; margin-right:40px; -qt-block-indent:0; text-indent:0px;">The program was written by Peter Deak (hungary)&lt;br />E-mail: hyperr@freemail.hu &lt;br />&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;br />&lt;span style=" font-weight:600;">License:&lt;/span> &lt;/p>
-&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:40px; margin-right:40px; -qt-block-indent:0; text-indent:0px;">General Public License (GPL)&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;br />&lt;span style=" font-weight:600;">Homepage:&lt;/span> &lt;/p>
-&lt;p style=" margin-top:12px; margin-bottom:12px; margin-left:40px; margin-right:40px; -qt-block-indent:0; text-indent:0px;">You can read about the program and get new versions, sources etc, in the hompage of cdcat:&lt;br />&lt;span style=" font-family:'Courier New,courier';">http://cdcat.sourceforge.net&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
+&lt;p style="-qt-paragraph-type:empty; margin-top:12px; margin-bottom:12px; margin-left:40px; margin-right:40px; -qt-block-indent:0; text-indent:0px;">&lt;/p>&lt;/body>&lt;/html></string>
      </property>
      <property name="text" stdset="0" >
       <string>&lt;p align="center">&lt;font size="+1">&lt;b>Help&lt;/b>&lt;/font>&lt;/p>&lt;br>
