@@ -2,6 +2,7 @@
 	- folter tree after import now works again
 	- dont scan archive if disabled in config
 	- option for display current scanned file (reading mediainfo, scanning archive) in tray added
+	- help dialog reworked
 
 08. May 2012 Christoph Thielecke <crissi99@gmx.de>
 	- possibility to disable mediainfo at compile time added
